--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<tr>
 		<td width="389">
 		<p align="center">
-		<a href="https://slivles.github.io/ComputerGraphics/HW3/HW3.html">
+		<a href="HW3/HW3.html">
 		HW03.html</a></td>
 	</tr>
 </table>
