--- a/index.html
+++ b/index.html
@@ -27,4 +27,16 @@
 		<a href="HW3/HW3.html">
 		HW03.html</a></td>
 	</tr>
+	<tr>
+		<td width="389">
+
+		<img border="0" src="https://raw.githubusercontent.com/slivles/ComputerGraphics/gh-pages/HW5/HW5GIF.gif" width="300" height="300"></td>	
+
+	</tr>
+	<tr>
+		<td width="389">
+		<p align="center">
+		<a href="HW5/HW5.html">
+		HW05.html</a></td>
+	</tr>
 </table>
