--- a/index.html
+++ b/index.html
@@ -2,41 +2,50 @@
 </h1>
 <h1 align="center"><font face="Bookman Old Style">sleeveless0330@gmail.com</font></h1>
 <table border="1" width="100%">
-	<tr>
-		<td width="389">
 
-		<img border="0" src="https://raw.githubusercontent.com/slivles/ComputerGraphics/master/hw1/PLEASE.gif" width="300" height="300"></td>	
-
-	</tr>
 	<tr>
+	
+		<td>
+		<img border="0" src="https://raw.githubusercontent.com/slivles/ComputerGraphics/master/hw1/PLEASE.gif" width="300" height="300">
+		</td>
+	
+	
 		<td width="389">
 		<p align="center">
 		<a href="https://slivles.github.io/ComputerGraphics/hw1/hw1.html">
-		HW01.html</a></td>
-	</tr>
-	//
-	<tr>
+		HW01.html</a>
+	
+	
+	
+	
 		<td width="389">
 
-		<img border="0" src="https://raw.githubusercontent.com/slivles/ComputerGraphics/gh-pages/HW3/03.gif" width="300" height="300"></td>	
+		<img border="0" src="https://raw.githubusercontent.com/slivles/ComputerGraphics/gh-pages/HW3/03.gif" width="300" height="300">	
 
-	</tr>
-	<tr>
+	
 		<td width="389">
 		<p align="center">
 		<a href="HW3/HW3.html">
-		HW03.html</a></td>
-	</tr>
-	<tr>
+		HW03.html</a>
+	
 		<td width="389">
 
-		<img border="0" src="https://raw.githubusercontent.com/slivles/ComputerGraphics/gh-pages/HW5/HW5GIF.gif" width="300" height="300"></td>	
+		<img border="0" src="https://raw.githubusercontent.com/slivles/ComputerGraphics/gh-pages/HW5/HW5GIF.gif" width="300" height="300">
 
-	</tr>
-	<tr>
+	
 		<td width="389">
 		<p align="center">
 		<a href="HW5/HW5.html">
-		HW05.html</a></td>
+		HW05.html</a>
+	</tr>
+	<tr>
+		<td width="389">
+
+		<img border="0" src="https://raw.githubusercontent.com/slivles/ComputerGraphics/gh-pages/HW6/06.gif" width="300" height="300">
+
+	
+		<td width="389">
+		<p align="center">
+		<a href="HW6/HW6.html">
 	</tr>
 </table>
