index error delete 2nd

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 	
 		<td width="389">
 		<p align="center">
-		HW06.html<a href="HW6/HW6.html">
+		<a href="HW6/HW6.html">
+		HW06.html</a>
 	</tr>
 </table>
